test/scc_test/decl/semantic-errors/027.a
027.t:3:5: error: field 'foo' declared as function